Fixs main icons overflow

--- a/src/scss/components/directory-menu/filter-menu/_filter-menu.scss
+++ b/src/scss/components/directory-menu/filter-menu/_filter-menu.scss
@@ -2,7 +2,7 @@
 * @Author: Sebastian Castro
 * @Date:   2017-02-28 13:25:52
 * @Last Modified by:   Sebastian Castro
-* @Last Modified time: 2017-08-09 13:15:56
+* @Last Modified time: 2017-08-18 08:22:11
 */
 @import 'favorite-filter';
 @import 'pending-filter';
@@ -26,7 +26,8 @@
 		width: 3.5rem;
 		padding-top: .6rem;
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
+    overflow-x:hidden;
 
     .icon
     {
